--- a/app/src/main/res/layout/fragment_tools.xml
+++ b/app/src/main/res/layout/fragment_tools.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.tools.ToolsFragment">
+    tools:context=".ui.tools.ToolsFragment"
+    android:id="@+id/fragment_container_tool">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
