--- a/app/src/main/res/layout/activity_tool.xml
+++ b/app/src/main/res/layout/activity_tool.xml
@@ -24,6 +24,34 @@
   </com.google.android.material.appbar.AppBarLayout>
 
 
+
+
+  <LinearLayout
+      android:id="@+id/searchLayout"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      android:padding="16dp"
+      android:visibility="gone">
+
+    <EditText
+        android:id="@+id/searchEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:inputType="text"
+        android:maxLines="1" />
+
+    <Button
+        android:id="@+id/searchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Cari" />
+  </LinearLayout>
+
+
+
+
   <WebView
       android:id="@+id/webViewTool"
       android:layout_width="match_parent"
