--- a/app/src/main/res/layout/list_tools.xml
+++ b/app/src/main/res/layout/list_tools.xml
@@ -66,7 +66,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="4dp"
                         android:layout_weight="1"
-                        android:text="Tambahkan ke favorit" />
+                        android:text="@string/tambah_ke_favorit" />
 
                     <Button
                         android:id="@+id/bukaToolButton"
@@ -74,7 +74,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="4dp"
-                        android:text="Buka Tool"
+                        android:text="@string/button_buka"
                         android:layout_gravity="right"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
