--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -64,6 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:autoLink="web"
+            android:gravity="center"
             android:textColor="@color/black"
             android:text="@string/about_bantuan_link"
             android:textSize="15sp"
